--- a/docs/issues/2024-08.rst
+++ b/docs/issues/2024-08.rst
@@ -12,8 +12,8 @@ Featured
 `Similarity Distance-Based Label Assignment for Tiny Object Detection <https://arxiv.org/pdf/2407.02394>`_
     A better method for non-max suppression for tiny object detection.  Seems to greatly improve performance of faster R-CNN on AITOD.  Worth looking into for any of our tiny object detection problems.
 
-`Learning to (Learn at Test Time): RNNs with Expressive Hidden States <https://arxiv.org/pdf/2407.04620>`_
-    New hidden state model with linear complexity in context length.  Seems to outperform both transformers and Mamba in terms of computatoinal time and results.  Impressive if true.
+`Revealing the Dark Secrets of Extremely Large Kernel ConvNets on Robustness <https://arxiv.org/pdf/2407.08972>`_
+    ConvNets with extremely large kernels achieve comparable/superior performance compared to vision transformers.  This paper demonstrates this for robustness and investigates why.
 
 `Fast, Scalable, Energy-Efficient Non-element-wise Matrix Multiplication on FPGA <https://arxiv.org/pdf/2407.02362>`_
     A new matrix multiplication method for putting neural nets on FPGAs.  Much more efficient than the baseline.
@@ -38,6 +38,9 @@ LLMs
 `Me, Myself, and AI: The Situational Awareness Dataset (SAD) for LLMs <https://arxiv.org/pdf/2407.04694>`_
     Are LLMs aware that they are LLMs?  If they are, does this change how they behave?  The authors investigate this and say "not really", but it's an interesting thought because roleplay is generally a way to get an LLM to unlock new capabilities.
 
+`SLIP: Securing LLM’s IP Using Weights Decomposition <https://arxiv.org/pdf/2407.10886>`_
+    Microsoft develops a method to protect LLM weights from being discovered by decomposing them into two matrices, one of which is recoverable and one of which is not.
+
 Ethics
 ------
 
@@ -45,6 +48,14 @@ Autonomy
 --------
 `TREE SEARCH FOR LANGUAGE MODEL AGENTS <https://arxiv.org/pdf/2407.01476>`_
     How to get an LLM to act as an autonomous agent with decent-to-good reasoning?  Make it perform a tree search!  This seems similar to how beam search operates and could be an interesting way to empower an autonomous UAS.
+
+`Spider2-V: How Far Are Multimodal Agents From Automating Data Science and Engineering Workflows? <https://arxiv.org/pdf/2407.10956>`_
+    From Google Deepmind.  Investigates whether automous agents are able to take our jobs yet by introducing a new benchmarking dataset.  The best performing agent gets 14%, so the answer is no.
+
+Reinforcement Learning
+----------------------
+`Enhancing Building Safety Design for Active Shooter Incidents: Exploration of Building Exit Parameters using Reinforcement Learning-Based Simulation <https://arxiv.org/pdf/2407.10441>`_
+    Incredibly morbid, but there's something here that can be adapted to simulating armed combatants that may have a use case.
 
 Doctrinaire
 -----------
@@ -73,10 +84,13 @@ Gaussian Splatting
 `Segment Any 4D Gaussians <https://arxiv.org/pdf/2407.04504>`_
     Segment Anything for 4D Gaussian splatting.  Looks pretty impressive, but I struggle to think of a use case for 4D Gaussian splatting over 3D.  Maybe I lack imagination.
 
-FPGA
-----
+Gotta Go Fast
+-------------
 `Fast, Scalable, Energy-Efficient Non-element-wise Matrix Multiplication on FPGA <https://arxiv.org/pdf/2407.02362>`_
     A new matrix multiplication method for putting neural nets on FPGAs.  Much more efficient than the baseline.
+
+`Fast Matrix Multiplications for Lookup Table-Quantized LLMs <https://arxiv.org/pdf/2407.10960>`_
+    Another paper in the "make LLM go fast by multiply matrix fast" genre.  Like most of these it goes a bit over my head, but it seems to have quite an interesting approach, using an offline lookup table to supplement its quantized matrix mulitiplication.
 
 Knowledge Graphs
 ----------------
