--- a/docs/issues/2024-08.rst
+++ b/docs/issues/2024-08.rst
@@ -55,6 +55,9 @@ Autonomy
 `Distilling Tiny and Ultra-fast Deep Neural Networks for Autonomous Navigation on Nano-UAVs <https://arxiv.org/pdf/2407.12675>`_
     Builds a tiny CNN to function as the brain on a "nano-drone".  Lots of potential with a swarm of these things for recon purposes.
 
+`ODYSSEY: Empowering Agents with Open-World Skills <https://arxiv.org/pdf/2407.15325>`_
+    Establishes a framework/dataset for open-world autonomous agents in Minecraft.  Seems fun/silly at first, but might have enough similarities to, e.g., drones flying around looking for things to do to be worth keeping an eye on.
+
 Reinforcement Learning
 ----------------------
 `Enhancing Building Safety Design for Active Shooter Incidents: Exploration of Building Exit Parameters using Reinforcement Learning-Based Simulation <https://arxiv.org/pdf/2407.10441>`_
@@ -146,6 +149,9 @@ New Models
 
 `ViLLa: Video Reasoning Segmentation with Large Language Model <https://arxiv.org/pdf/2407.14500>`_
     A novel vision LLM which takes a text prompt as an input and segments the relevant objects in a video, possibly with a text description as well.  Looks pretty powerful in a limited number of examples, but code is coming "soon".
+
+`AdaCLIP: Adapting CLIP with Hybrid Learnable Prompts for Zero-Shot Anomaly Detection <https://arxiv.org/pdf/2407.15795>`_
+    A novel CLIP variant that functions as a zero-shot anomaly detector/segmenter.  Takes text as an input and semgents whatever was described in the text.  Potentially useful as an "off-the-shelf" tool for a lot of functions.  Maybe a Grounded SAM replacement?
 
 New LLMs
 --------
