--- a/docs/issues/2024-08.rst
+++ b/docs/issues/2024-08.rst
@@ -10,7 +10,7 @@ Featured
     A novel vision LLM which takes a text prompt as an input and segments the relevant objects in a video, possibly with a text description as well.  Looks pretty powerful in a limited number of examples, but code is coming "soon".
 
 `Distilling Tiny and Ultra-fast Deep Neural Networks for Autonomous Navigation on Nano-UAVs <https://arxiv.org/pdf/2407.12675>`_
-    Builds a tiny CNN to function as the brain on a "nano-drone".  Lots of potential with a swarm of these things for recon purposes.
+    Builds a tiny CNN to function as the brain on a "nano-drone".  Lots of potential with a swarm of these things coordinating together.
 
 `Revealing the Dark Secrets of Extremely Large Kernel ConvNets on Robustness <https://arxiv.org/pdf/2407.08972>`_
     ConvNets with extremely large kernels achieve comparable/superior performance compared to vision transformers.  This paper demonstrates this for robustness and investigates why.
